--- a/README
+++ b/README
@@ -4,7 +4,7 @@ xrr - C Extension for Python and pyxrr - wrapper
 Author:  Carsten Richter
 Contact: carsten.richter@desy.de
       or carsten.richter@physik.tu-freiberg.de
-Website: http://desy.de/~crichter/
+Website: http://carichte.github.io/pyxrr/
 
 
 
