replaced desy url

--- a/README
+++ b/README
@@ -8,7 +8,7 @@ Authors:   Carsten Richter & Hartmut Stoecker
 Contact 1: carsten.richter@desy.de
         or carsten.richter@physik.tu-freiberg.de
 Contact 2: hartmut.stoecker@physik.tu-freiberg.de
-Website:   http://desy.de/~crichter/
+Website:   http://carichte.github.io/pyxrr/
            https://github.com/carichte/pyxrr
 
 
